--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -67,6 +67,16 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--mysql连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+
+
+
     </dependencies>
 
 </project>
