--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>spring-xml</module>
         <module>springboot</module>
         <module>spring-annotation</module>
+        <module>spring-aop</module>
     </modules>
 
     <properties>
