--- a/spring-xml/pom.xml
+++ b/spring-xml/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wayne.spring</groupId>
-    <artifactId>spring</artifactId>
+    <artifactId>spring-xml</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
