--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>spring-annotation</module>
         <module>spring-aop</module>
         <module>spring-transaction</module>
+        <module>spring-webmvc</module>
     </modules>
 
     <properties>
